<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/back"
    tools:context="com.fortuna.android.mobilecustomer.main.PengaduanPelangganActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewPDAM"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:background="@mipmap/icon_td" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/black" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <com.fortuna.android.mobilecustomer.view.MyCustomEditTextArial
                        android:id="@+id/input_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_nama_pengaduan"
                        android:imeOptions="actionNext"
                        android:inputType="textCapSentences"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@drawable/color_cursor" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <com.fortuna.android.mobilecustomer.view.MyCustomEditTextArial
                        android:id="@+id/input_idpel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_kode_pelanggan"
                        android:imeOptions="actionNext"
                        android:inputType="textCapSentences"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@drawable/color_cursor" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <com.fortuna.android.mobilecustomer.view.MyCustomEditTextArial
                        android:id="@+id/input_alamat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_alamat_pelanggan"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@drawable/color_cursor" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <com.fortuna.android.mobilecustomer.view.MyCustomEditTextArial
                        android:id="@+id/input_telepon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_no_telepon"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@drawable/color_cursor" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <com.fortuna.android.mobilecustomer.view.MyCustomEditTextArial
                        android:id="@+id/input_ponsel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_no_ponsel"
                        android:imeOptions="actionNext"
                        android:inputType="phone" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <com.fortuna.android.mobilecustomer.view.MyCustomEditTextArial
                        android:id="@+id/input_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_message"
                        android:inputType="textMultiLine"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@drawable/color_cursor" />
                </android.support.design.widget.TextInputLayout>

                <com.fortuna.android.mobilecustomer.button.ButtonPlus
                    android:id="@+id/btnPengaduan"
                    style="@style/my_button"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_weight="1.00"
                    android:background="@drawable/btn_color_changed"
                    android:text="@string/btn_pengaduan"
                    android:textColor="@color/white"
                    android:typeface="monospace" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <com.fortuna.android.mobilecustomer.view.MyCustomTextViewArial
                        android:id="@+id/copyRight"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/txt_copyright"
                        android:textSize="12sp" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
