<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@mipmap/back"
    android:orientation="vertical"
    tools:context="com.fortuna.android.mobilecustomer.main.StatusPendaftaranPelangganActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewPDAM"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:background="@mipmap/icon_td" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/black" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="16dp"
                android:paddingTop="16dp">

                <com.fortuna.android.mobilecustomer.view.MyCustomTextViewArial
                    style="?android:textAppearanceSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:text="@string/status_pendaftaran_desc"
                    android:textColor="@color/black"
                    android:typeface="monospace" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.fortuna.android.mobilecustomer.view.MyCustomEditTextArial
                        android:id="@+id/etStatusPendaftaran"
                        style="?android:textAppearanceMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1.00"
                        android:ems="10"
                        android:hint="@string/hint_input_status_daftar"
                        android:imeOptions="actionDone"
                        android:inputType="textCapSentences"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="24sp" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp">

                    <com.fortuna.android.mobilecustomer.button.ButtonPlus
                        android:id="@+id/btnStatusDaftar"
                        style="@style/my_button"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1.00"
                        android:background="@drawable/btn_color_changed"
                        android:text="@string/btn_status"
                        android:textColor="@color/white"
                        android:typeface="monospace" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <com.fortuna.android.mobilecustomer.view.MyCustomTextViewArial
                        android:id="@+id/copyRight"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:gravity="center"
                        android:paddingTop="16dp"
                        android:text="@string/txt_copyright"
                        android:textSize="12sp" />

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
