<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/back"
    tools:context=".main.LokasiKantorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewPDAM"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:background="@mipmap/icon_td" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/black" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <com.fortuna.android.mobilecustomer.view.MyCustomTextViewArial
                    android:id="@+id/profileId1"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/profile_id1"
                    android:textColor="@color/black"
                    android:textSize="10pt"
                    android:textStyle="bold" />

                <com.fortuna.android.mobilecustomer.view.MyCustomTextViewArial
                    android:id="@+id/profileId2"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/profile_id2"
                    android:textColor="@color/black"
                    android:textSize="8pt" />

                <com.fortuna.android.mobilecustomer.view.MyCustomTextViewArial
                    android:id="@+id/profileId3"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/profile_id3"
                    android:textColor="@color/black"
                    android:textSize="6pt" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="15dp"
                    android:weightSum="4">

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageButton
                            android:id="@+id/imgbtn_web"
                            android:layout_width="60dp"
                            android:layout_height="fill_parent"
                            android:layout_margin="20dp"
                            android:background="@mipmap/web1"
                            android:clickable="true"
                            android:onClick="clickWeb"
                            android:scaleType="fitXY" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageButton
                            android:id="@+id/imgbtn_facebook"
                            android:layout_width="60dp"
                            android:layout_height="fill_parent"
                            android:layout_margin="20dp"
                            android:background="@mipmap/facebook1"
                            android:clickable="true"
                            android:scaleType="fitXY" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageButton
                            android:id="@+id/imgbtn_email"
                            android:layout_width="60dp"
                            android:layout_height="fill_parent"
                            android:layout_margin="20dp"
                            android:background="@mipmap/email1"
                            android:clickable="true"
                            android:scaleType="fitXY" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageButton
                            android:id="@+id/imgbtn_twitter"
                            android:layout_width="60dp"
                            android:layout_height="fill_parent"
                            android:layout_margin="20dp"
                            android:background="@mipmap/twitter2"
                            android:clickable="true"
                            android:onClick="clickWeb"
                            android:scaleType="fitXY" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.fortuna.android.mobilecustomer.button.ButtonPlus
                            android:id="@+id/btnLokasi"
                            style="@style/my_button"
                            android:layout_width="0dp"
                            android:layout_height="48dp"
                            android:layout_marginTop="20dp"
                            android:layout_weight="1.00"
                            android:background="@drawable/btn_color_changed"
                            android:text="@string/lokasi"
                            android:textColor="@color/white"
                            android:typeface="monospace" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <com.fortuna.android.mobilecustomer.view.MyCustomTextViewArial
                    android:id="@+id/copyRight"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:text="@string/txt_copyright"
                    android:textSize="12sp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
